# canopy

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  upk_tool.py
canopy/: __init__.py  __main__.py  app.py  config.py
canopy/api/: audit_routes.py  auth_routes.py  command_routes.py  deployment_routes.py  fleet_routes.py  package_routes.py  system_routes.py  websocket_routes.py
canopy/audit/: logger.py
canopy/auth/: dependencies.py  jwt_handler.py
canopy/broker/: auth.py  protocol.py  server.py
canopy/certs/: generator.py
canopy/db/: engine.py  models.py
canopy/fleet/: manager.py  schemas.py
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  index.css  theme.ts
frontend/src/api/: client.ts  websocket.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: AuditLog.tsx  Dashboard.tsx  Deployments.tsx  Login.tsx  PackageBuilder.tsx  Packages.tsx  RobotDetail.tsx
tests/: test_deployment.py  test_deployment_routes.py  test_websocket_auth.py
